@@ -30,4 +30,15 @@ void *en_mac_binding_aging_waker_init(struct engine_node *node,
                                       struct engine_arg *arg);
 void en_mac_binding_aging_waker_cleanup(void *data);
 
+/* The FDB aging node functions. */
+void en_fdb_aging_run(struct engine_node *node, void *data);
+void *en_fdb_aging_init(struct engine_node *node, struct engine_arg *arg);
+void en_fdb_aging_cleanup(void *data);
+
+/* The FDB aging waker node functions. */
+void en_fdb_aging_waker_run(struct engine_node *node, void *data);
+void *en_fdb_aging_waker_init(struct engine_node *node,
+                              struct engine_arg *arg);
+void en_fdb_aging_waker_cleanup(void *data);
+
 #endif /* northd/aging.h */
